--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 --------------------------------------*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Style+Script&display=swap");
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
 
 /*-------------------------------------
  2. General Styles
